# bootcamp0b10

./: Cargo.toml  README.md
week1/fields/: Cargo.toml
week1/fields/src/: main.rs
week1/naive_rsa/: Cargo.toml  README.md
week1/naive_rsa/src/: alg.rs  main.rs  math.rs
week3/babysnark/: Cargo.toml
week3/babysnark/src/: main.rs
week3/kzg_challenge/: Cargo.toml  README.md  calc.py
week3/kzg_challenge/src/: main.rs
week3/shamir/: Cargo.toml
week3/shamir/src/: main.rs
week4/fri/: Cargo.toml
week4/fri/src/: fold_polynomial.rs  fri_commit.rs  main.rs
week4/stark/: Cargo.toml
week5/stark101/: Cargo.toml
week5/stark101/src/: main.rs
week5/stark101/src/constraints/: mod.rs
week5/stark101/src/fri/: commit.rs  decommit.rs  mod.rs
week5/stark101/src/lde/: mod.rs
week5/stark101/src/trace/: mod.rs
