[workspace]
resolver = "2"
members = [
    "week1/fields",
    "week1/naive_rsa", "week3/babysnark", "week3/shamir",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
blake2 = "0.10.6"
lambdaworks-math = { git = "https://github.com/lambdaclass/lambdaworks.git" }
rand = "0.8.5"
