[package]
name = "stark101"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3.workspace = true
hex.workspace = true
lambdaworks-math.workspace = true
lambdaworks-crypto.workspace = true